--- a/app/public/mobile.css
+++ b/app/public/mobile.css
@@ -186,6 +186,8 @@
         left: 0;
         right: 0; 
         border-radius: .75rem; 
+        overflow-wrap: break-word;
+
       }
 
     .correctAnswer {
@@ -217,7 +219,7 @@
     .answer {
       font-size: 0.3rem; 
       line-height: 2; 
-      margin-left: 40%;
+      margin-left: 20%;
       }
   
     .loser, .winner {
